# browser-brain

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  INSTALL.md  LOGGER_OPTIMIZATION_SUMMARY.md  LOG_REFACTOR_SUMMARY.md  README.md  check_types.sh  pyproject.toml  requirements.txt  run_official_scraper.sh  run_web.sh  run_xhs_scraper.sh  test_callback_logger.py  test_destination_guide.py  test_logger.py  test_logger_callback.py  test_scraper.py  test_scraper_init.py  test_unified_logging.py
app/: __init__.py  main.py
app/agents/: planner_agent.py
app/core/: browser_manager.py
app/llm/: __init__.py  factory.py
app/models/: attraction.py  hotel.py  prompts.py  trip_plan.py
app/scrapers/: __init__.py  base_scraper.py  browser_use_scraper.py  models.py  official_browser_use.py  official_scraper.py  run_official.py  run_xhs.py  xhs_browser_use.py  xhs_scraper.py
app/utils/: __init__.py  anti_crawler.py  data_utils.py  link_validator.py  logger.py
config/: selectors.yaml  settings.py
data/plans/: 北京_7日游_20251007_005638.json  北京_7日游_20251008_170103.json  北京_7日游_20251010_005738.json  北京_7日游_20251011_014214.json  北京_7日游_20251012_005954.json
docs/: captcha_handling_guide.md  debug_log_analysis.md  fast_mode_guide.md  final_test_summary_20251007.md  fix_summary_20251007.md  log_capture_improvement.md  test_scraper_analysis_20251007.md  validation_test_report_20251007.md
examples/: chain_tasks_example.py  parallel_agents_example.py
frontend/: app.py  test_simple.py
scripts/: cleanup_browser_data.sh
