[project]
name = "browser-brain"
version = "1.6.0"
description = "基于 Browser-Use AI 的智能旅行规划系统"
readme = "README.md"
requires-python = ">=3.11,<3.14"
license = "MIT"
authors = [
    {name = "Browser-Brain Team"}
]

dependencies = [
    # 核心依赖 - AI浏览器控制 (从 GitHub 安装最新版本)
    "browser-use @ git+https://github.com/browser-use/browser-use.git@6d3e276",
    "playwright>=1.40.0",

    # AI/LLM (使用宽松版本避免冲突)
    "langchain>=0.3.0",
    "langchain-openai>=0.3.0",
    "langchain-anthropic>=0.3.0",
    "langchain-google-genai>=2.0.0",
    "openai>=1.0.0",
    "anthropic>=0.8.0",
    "google-generativeai>=0.3.0",

    # Web框架
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",

    # 前端
    "streamlit>=1.28.0",

    # 数据处理
    "pandas>=2.0.0",

    # 工具库
    "python-dotenv>=1.0.0",
    "pydantic>=2.5.0",

    # 日志
    "loguru>=0.7.0",
]

[project.optional-dependencies]
dev = [
    "pylint>=3.0.0",
    "mypy>=1.7.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app", "config", "frontend"]

[tool.mypy]
python_version = "3.11"
warn_return_any = false
warn_unused_configs = false
disallow_untyped_defs = false
ignore_missing_imports = true
no_implicit_optional = false
check_untyped_defs = false
exclude = [
    "venv",
    ".venv",
    "tests",
]

# 忽略常见但不影响运行的错误
disable_error_code = [
    "attr-defined",
    "valid-type",
    "union-attr",
    "call-arg",
]
